{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 28,
  "lineage": "2ce20cc1-ebec-1c77-4786-a38002b03340",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-008a9f4478d7401d4",
            "arn": "arn:aws:ec2:ap-south-1:005888760869:instance/i-04d71f7c1e8ada1a3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d71f7c1e8ada1a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ecrfarmer",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0745686d6aef98374",
            "private_dns": "ip-10-0-1-239.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.239",
            "public_dns": "ec2-13-232-105-118.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.105.118",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ee21e776187a5dbb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b9148068a515f24",
            "tags": {
              "Name": "Ubuntu-App-Server"
            },
            "tags_all": {
              "Name": "Ubuntu-App-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0485324c784379424"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:005888760869:internet-gateway/igw-0c5c4d22f359737cb",
            "id": "igw-0c5c4d22f359737cb",
            "owner_id": "005888760869",
            "region": "ap-south-1",
            "tags": {
              "Name": "free-tier-igw"
            },
            "tags_all": {
              "Name": "free-tier-igw"
            },
            "vpc_id": "vpc-090ea4724a3fb7593"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:005888760869:route-table/rtb-0df09e8e9ffeee6dc",
            "id": "rtb-0df09e8e9ffeee6dc",
            "owner_id": "005888760869",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5c4d22f359737cb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "free-tier-route-table"
            },
            "tags_all": {
              "Name": "free-tier-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ea4724a3fb7593"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e898f6955e2a050",
            "region": "ap-south-1",
            "route_table_id": "rtb-0df09e8e9ffeee6dc",
            "subnet_id": "subnet-00b9148068a515f24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:005888760869:security-group/sg-0485324c784379424",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0485324c784379424",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "110.224.87.150/32"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "005888760869",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-security-group"
            },
            "tags_all": {
              "Name": "ec2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ea4724a3fb7593"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:005888760869:subnet/subnet-00b9148068a515f24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b9148068a515f24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "005888760869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "free-tier-subnet"
            },
            "tags_all": {
              "Name": "free-tier-subnet"
            },
            "vpc_id": "vpc-090ea4724a3fb7593"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:005888760869:vpc/vpc-090ea4724a3fb7593",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b87bcd0935a8321",
            "default_route_table_id": "rtb-0eb854cbff16b80f3",
            "default_security_group_id": "sg-0573ef6074f2a9db9",
            "dhcp_options_id": "dopt-0433bfaeb883a7f02",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090ea4724a3fb7593",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb854cbff16b80f3",
            "owner_id": "005888760869",
            "region": "ap-south-1",
            "tags": {
              "Name": "free-tier-vpc"
            },
            "tags_all": {
              "Name": "free-tier-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}